As Admin User I want to link applicant to its FB/Twitter account

--- a/match-web/app/applicant/details.html
+++ b/match-web/app/applicant/details.html
@@ -220,6 +220,16 @@
                                 <div class="help-block" ng-message="required">{{'field.required' | translate}}</div>
                             </div>
                         </div>
+
+                        <div class="form-group col-md-6">
+                            <label translate>fbAccount</label>
+                            <input type="text" class="form-control" ng-model="item.fbAccount" name="fbAccount" placeholder="{{'fbAccount' | translate}}">
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <label translate>twtAccount</label>
+                            <input type="text" class="form-control" ng-model="item.twtAccount" name="twtAccount" placeholder="{{'twtAccount' | translate}}">
+                        </div>
                     </div>
 
                     <div class="row">
