--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -89,6 +89,7 @@
   <script src="admin/create/controller.js"></script>
   <script src="admin/update/controller.js"></script>
   <script src="admin/list/controller.js"></script>
+  <script src="applicant/view/controller.js"></script>
 
 </body>
 </html>
